# stubborn

./: .gitignore  CMakeLists.txt  Dockerfile  HelloWorld.rc  LICENSE  README.md  TODO.txt  WinInternals.h  docker-compose.yml  main.cpp  resource.h
app/: app.py  builder.py  encryption.py  form.py  requirements.txt
app/stub_templates/process_hollowing/: cookiecutter.json
app/stub_templates/process_hollowing/{{ cookiecutter.target_dir }}/: CMakeLists.txt  antivirusChecks.cpp  antivirusChecks.h  debug.cpp  debug.h  decrypt.cpp  decrypt.h  hiddenImports.cpp  hiddenImports.h  junkApiCalls.cpp  junkApiCalls.h  main.cpp  processHollower.cpp  processHollower.h  resource.h  windowsInternals.cpp  windowsInternals.h
app/templates/: _formhelpers.html  base.html  home.html
config/: start.sh  stubborn-crontab
example/code/: CMakeLists.txt  antivirusChecks.cpp  antivirusChecks.h  debug.cpp  debug.h  decrypt.cpp  decrypt.h  hiddenImports.cpp  hiddenImports.h  junkApiCalls.cpp  junkApiCalls.h  main.cpp  processHollower.cpp  processHollower.h  resource.h  resource.rc  windowsInternals.cpp  windowsInternals.h
